# finance-data-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: sample_prices.csv
src/finance_data_pipeline/: __init__.py  cli.py  indicators.py  loader.py  report.py
tests/: test_indicators.py
